--- a/project5.html
+++ b/project5.html
@@ -225,24 +225,36 @@
             </div>
         </div>
         <div class="clear-float"></div>
-    <p> However, ideally, we should use more than 4 correspondence points to make homography recovery stable and less prone to error. Using more than 4 correspondence points would make the equation overdetermined and we solve this by least-squares solver to recover the homographies. For this project, I used the given correspondence tool to select the correspondence points.</p>
-        <h2>Warp the Images/Image Rectification</h2>
-            <p> After calculating the homography, I use inverse warping to warp original images to the desired shape. Since I use inverse warping, the corresponding pixels in the source image can be lie between pixels so I used RegularGridInterpolator to interpolate the pixel values.</p>
-        <p> For image rectification I used the inverse warping with homography I calculated earlier. Instead of selecting corresponding points between two images, I chose the edges of a rectangle or a square shape from an image and I manually defined the corresponding points so that these edges would form a rectified rectangular shape. Here are the corresponding points I have chosen and the resultant rectified images:</p>
-        <div class="clear-float"></div>
-        <div class="image-gri">
-        <div class="image-container">
-            <img src="proj4images/yastikp.png" alt="taj.jpg">
-        </div>
-        <div class="image-container">
-            <img src="proj4images/yastikkare.png" alt="taj.jpg">
-        </div>
-        <div class="image-container">
-            <img src="proj4images/tip.png" alt="taj.jpg">
-        </div>
-        <div class="image-container">
-            <img src="proj4images/tikare.png" alt="taj.jpg">
-        </div>
+    <h2>Iterative Denoising</h2>
+    <p> For iterative denoising, I create a new list of timesteps,strided_timesteps, to skip some steps. The stride of steps will be 30. In the following, denoised image is displayed at every fifth step and final clean image prediction is shown in comparison to other techniques:<p>
+                    <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/f1.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f2.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f3.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f4.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f5.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f6.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f7.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f8.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f9.png" alt="taj_sharp.jpg">
+            </div>
         </div>
         <div class="clear-float"></div>
         <p>For the first image, I have manually chosen the corresponding points to be [[200,200],[500,200],[500,500],[200,500]] to form a square. For the second iamge, I have manually chosen the corresponding points to be [[200,200],[800,200],[800,400],[200,400]] to form a rectangle.</p>
