--- a/project5.html
+++ b/project5.html
@@ -257,7 +257,7 @@
             </div>
         </div>
         <div class="clear-float"></div>
-        <h2>1.5 Diffusion Model Sampling <h2>
+        <h2>1.5 Diffusion Model Sampling </h2>
         <p> For this part, I use iterative denoising to generate images from scratch. I pass in random noise, and the function denoises pure noise. Here are 5 samples: </p>
                         <div class="image-grid">
             <div class="image-container">
