--- a/project5.html
+++ b/project5.html
@@ -283,7 +283,28 @@
             </div>
         </div>
         <div class="clear-float"></div>
-    <h1>Part B: Diffusion Models from Scratch</h1>
+        <h2>1.6 Classifier-Free Guidance (CFG)<h2>
+                                <div class="image-griddd">
+            <div class="image-container">
+                <img src="images5/cfg1.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/cfg2.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/cfg3.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/cfg4.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/cfg5.png" alt="taj_sharp.jpg">
+            </div>
+        </div>
+        <div class="clear-float"></div>
+        <p> The quality of the results in the previous section were not great. To significantly improve image quality, I will use CFG in this section. For CFG, I compute both conditional and unconditional noise estimate. In CFG, we have a hyperparameter, named scale in the function, that determines its strength. When scale is 0, CFG is essentially unconditional noise estimate but when scale is bigger than 1, I am able to produce much more quality images. Here are 5 samples from CFG with scale=7:</p>
+    
+            <h1>Part B: Diffusion Models from Scratch</h1>
     <h2>Training a Single-Step Denoising UNet</h2>
     <p>For the second part of the project, I implement diffusion models from scratch. As a first step, I train single-sept denoising UNet. Firstly, I follow the model diagram for UNet to define its architecture. To train a denoiser with UNet, I use the image dataset from MNIST. Given a clean image, I add a random noise with sigma coefficient to create a noised image. Here are examples of noised images with different sigmas: </p>
     <div class="image-gr">
