--- a/project5.html
+++ b/project5.html
@@ -283,7 +283,7 @@
             </div>
         </div>
         <div class="clear-float"></div>
-        <h2>1.6 Classifier-Free Guidance (CFG)<h2>
+        <h2>1.6 Classifier-Free Guidance (CFG)</h2>
         <p> The quality of the results in the previous section were not great. To significantly improve image quality, I will use CFG in this section. For CFG, I compute both conditional and unconditional noise estimate. In CFG, we have a hyperparameter, named scale in the function, that determines its strength. When scale is 0, CFG is essentially unconditional noise estimate but when scale is bigger than 1, I am able to produce much more quality images. Here are 5 samples from CFG with scale=7:</p>
                                         <div class="image-griddd">
             <div class="image-container">
