--- a/project5.html
+++ b/project5.html
@@ -317,6 +317,84 @@
             </div>
         </div>
         <div class="clear-float"></div>
+    <p>Here are the edits of the test image, at different noise levels 1, 3, 5, 7, 10, 20 with "a high quality photo":</p>
+                <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/1-1.png" alt="taj_sharp.jpg">
+                                <p class="image-subtitle">i_start=1</p>
+
+            </div>
+                        <div class="image-container">
+                <img src="images5/1-3.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=3</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/1-5.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=5</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/1-7.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=7</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/1-10.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=10</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/1-20.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=20</p>
+            </div>
+                                    <img src="images5/1-1.png" alt="taj_sharp.jpg">
+                                <p class="image-subtitle">i_start=1</p>
+
+            </div>
+                        <div class="image-container">
+                <img src="images5/1-3.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=3</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/1-5.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=5</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/1-7.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=7</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/1-10.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=10</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/1-20.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=20</p>
+            </div>
+                        <img src="images5/2-1.png" alt="taj_sharp.jpg">
+                                <p class="image-subtitle">i_start=1</p>
+
+            </div>
+                        <div class="image-container">
+                <img src="images5/2-3.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=3</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/2-5.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=5</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/2-7.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=7</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/2-10.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=10</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/2-20.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=20</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
+    
             <h1>Part B: Diffusion Models from Scratch</h1>
     <h2>Training a Single-Step Denoising UNet</h2>
     <p>For the second part of the project, I implement diffusion models from scratch. As a first step, I train single-sept denoising UNet. Firstly, I follow the model diagram for UNet to define its architecture. To train a denoiser with UNet, I use the image dataset from MNIST. Given a clean image, I add a random noise with sigma coefficient to create a noised image. Here are examples of noised images with different sigmas: </p>
