--- a/project5.html
+++ b/project5.html
@@ -392,6 +392,30 @@
                 <img src="images5/2-20.png" alt="taj_sharp.jpg">
                                                             <p class="image-subtitle">i_start=20</p>
             </div>
+                            <img src="images5/3-1.png" alt="taj_sharp.jpg">
+                                <p class="image-subtitle">i_start=1</p>
+
+            </div>
+                        <div class="image-container">
+                <img src="images5/3-3.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=3</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/3-5.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=5</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/3-7.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=7</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/3-10.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=10</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/3-20.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=20</p>
+            </div>
         </div>
         <div class="clear-float"></div>
     
