--- a/project5.html
+++ b/project5.html
@@ -318,7 +318,7 @@
         </div>
         <div class="clear-float"></div>
     <p>Here are the edits of the test image, at different noise levels 1, 3, 5, 7, 10, 20 with "a high quality photo":</p>
-                <div class="image-grid">
+                <div class="image-g">
             <div class="image-container">
                 <img src="images5/1-1.png" alt="taj_sharp.jpg">
                                 <p class="image-subtitle">i_start=1</p>
