--- a/project5.html
+++ b/project5.html
@@ -335,6 +335,7 @@
                 <img src="images5/campanile.png" alt="taj_sharp.jpg">
                                     <p class="image-subtitle">Original Campanile</p>
             </div>
+                    <div class="image-container">
                                     <img src="images5/1-1.png" alt="taj_sharp.jpg">
                                 <p class="image-subtitle">i_start=1</p>
 
