--- a/project5.html
+++ b/project5.html
@@ -388,6 +388,7 @@
                 <img src="images5/kopruu.png" alt="taj_sharp.jpg">
                <p class="image-subtitle">Original Golden Gate</p>
             </div>
+        <div class="image-container">
                             <img src="images5/3-1.png" alt="taj_sharp.jpg">
                                 <p class="image-subtitle">i_start=1</p>
 
