--- a/project5.html
+++ b/project5.html
@@ -395,7 +395,99 @@
             </div>
         </div>
         <div class="clear-float"></div>
-    
+    <h2>1.7.1 Editing Hand-Drawn and Web Images </h2>
+    <p> The technique I used in the previous section also performs pretty well for nonrealistic images that is projected it to the natural image manifold. To test for these, I will use 1 image from web and 2 images by handwriting:</p>
+                    <div class="image-g">
+            <div class="image-container">
+                <img src="images5/w1-1.png" alt="taj_sharp.jpg">
+                                <p class="image-subtitle">i_start=1</p>
+
+            </div>
+                        <div class="image-container">
+                <img src="images5/w1-3.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=3</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/w1-5.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=5</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/w1-7.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=7</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/w1-10.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=10</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/w1-20.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=20</p>
+            </div>
+                                <div class="image-container">
+                <img src="images5/campanile.png" alt="taj_sharp.jpg">
+                                    <p class="image-subtitle">Original UP</p>
+                                </div>
+                    <div class="image-container">
+                        <img src="images5/w2-1.png" alt="taj_sharp.jpg">
+                                <p class="image-subtitle">i_start=1</p>
+
+            </div>
+                        <div class="image-container">
+                <img src="images5/w2-3.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=3</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/w2-5.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=5</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/w2-7.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=7</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/w2-10.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=10</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/w2-20.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=20</p>
+            </div>
+           <div class="image-container">
+                <img src="images5/w2.png" alt="taj_sharp.jpg">
+               <p class="image-subtitle">Original Golden Gate</p>
+            </div>
+        <div class="image-container">
+                            <img src="images5/3-1.png" alt="taj_sharp.jpg">
+                                <p class="image-subtitle">i_start=1</p>
+
+            </div>
+                        <div class="image-container">
+                <img src="images5/3-3.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=3</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/3-5.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=5</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/3-7.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=7</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/3-10.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=10</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/3-20.png" alt="taj_sharp.jpg">
+                                                            <p class="image-subtitle">i_start=20</p>
+            </div>
+                            <div class="image-container">
+                <img src="images5/kedi.png" alt="taj_sharp.jpg">
+                                <p class="image-subtitle">Original cat</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
+
             <h1>Part B: Diffusion Models from Scratch</h1>
     <h2>Training a Single-Step Denoising UNet</h2>
     <p>For the second part of the project, I implement diffusion models from scratch. As a first step, I train single-sept denoising UNet. Firstly, I follow the model diagram for UNet to define its architecture. To train a denoiser with UNet, I use the image dataset from MNIST. Given a clean image, I add a random noise with sigma coefficient to create a noised image. Here are examples of noised images with different sigmas: </p>
