--- a/project5.html
+++ b/project5.html
@@ -454,7 +454,7 @@
             </div>
            <div class="image-container">
                 <img src="images5/w2.png" alt="taj_sharp.jpg">
-               <p class="image-subtitle">Original Golden Gate</p>
+               <p class="image-subtitle">Original Handwriting Picture</p>
             </div>
         <div class="image-container">
                             <img src="images5/3-1.png" alt="taj_sharp.jpg">
