--- a/project5.html
+++ b/project5.html
@@ -457,33 +457,33 @@
                <p class="image-subtitle">Original Handwriting Picture</p>
             </div>
         <div class="image-container">
-                            <img src="images5/3-1.png" alt="taj_sharp.jpg">
+                            <img src="images5/w3-1.png" alt="taj_sharp.jpg">
                                 <p class="image-subtitle">i_start=1</p>
 
             </div>
                         <div class="image-container">
-                <img src="images5/3-3.png" alt="taj_sharp.jpg">
+                <img src="images5/w3-3.png" alt="taj_sharp.jpg">
                                                             <p class="image-subtitle">i_start=3</p>
             </div>
                         <div class="image-container">
-                <img src="images5/3-5.png" alt="taj_sharp.jpg">
+                <img src="images5/w3-5.png" alt="taj_sharp.jpg">
                                                             <p class="image-subtitle">i_start=5</p>
             </div>
                         <div class="image-container">
-                <img src="images5/3-7.png" alt="taj_sharp.jpg">
+                <img src="images5/w3-7.png" alt="taj_sharp.jpg">
                                                             <p class="image-subtitle">i_start=7</p>
             </div>
                         <div class="image-container">
-                <img src="images5/3-10.png" alt="taj_sharp.jpg">
+                <img src="images5/w3-10.png" alt="taj_sharp.jpg">
                                                             <p class="image-subtitle">i_start=10</p>
             </div>
                         <div class="image-container">
-                <img src="images5/3-20.png" alt="taj_sharp.jpg">
+                <img src="images5/w3-20.png" alt="taj_sharp.jpg">
                                                             <p class="image-subtitle">i_start=20</p>
             </div>
                             <div class="image-container">
-                <img src="images5/kedi.png" alt="taj_sharp.jpg">
-                                <p class="image-subtitle">Original cat</p>
+                <img src="images5/w3.png" alt="taj_sharp.jpg">
+                                <p class="image-subtitle">Original Handwriting Image 2</p>
             </div>
         </div>
         <div class="clear-float"></div>
