--- a/project5.html
+++ b/project5.html
@@ -424,7 +424,7 @@
                                                             <p class="image-subtitle">i_start=20</p>
             </div>
                                 <div class="image-container">
-                <img src="images5/campanile.png" alt="taj_sharp.jpg">
+                <img src="images5/w1.png" alt="taj_sharp.jpg">
                                     <p class="image-subtitle">Original UP</p>
                                 </div>
                     <div class="image-container">
