--- a/project5.html
+++ b/project5.html
@@ -487,8 +487,10 @@
             </div>
         </div>
         <div class="clear-float"></div>
-
-            <h1>Part B: Diffusion Models from Scratch</h1>
+    <h2> 1.7.2 Inpainting </h2>
+    <p></p>
+    <h2>1.7.3 Text-Conditional Image-to-image Translation</h2>
+    <h1>Part B: Diffusion Models from Scratch</h1>
     <h2>Training a Single-Step Denoising UNet</h2>
     <p>For the second part of the project, I implement diffusion models from scratch. As a first step, I train single-sept denoising UNet. Firstly, I follow the model diagram for UNet to define its architecture. To train a denoiser with UNet, I use the image dataset from MNIST. Given a clean image, I add a random noise with sigma coefficient to create a noised image. Here are examples of noised images with different sigmas: </p>
     <div class="image-gr">
