--- a/project5.html
+++ b/project5.html
@@ -513,6 +513,7 @@
                 <img src="images5/replaced1.png" alt="taj_sharp.jpg">
                                                             <p class="image-subtitle">Final</p>
             </div>
+            <div class="image-container">
                             <img src="images5/img2.png" alt="taj_sharp.jpg">
                                 <p class="image-subtitle">Original</p>
 
@@ -529,6 +530,7 @@
                 <img src="images5/replaced2.png" alt="taj_sharp.jpg">
                                                             <p class="image-subtitle">Final</p>
             </div>
+            <div class="image-container">
                         <img src="images5/img3.png" alt="taj_sharp.jpg">
                                 <p class="image-subtitle">Original</p>
 
